Edit links, re-introduce README.md

--- a/Exercício 1/Exercício 1.ipynb
+++ b/Exercício 1/Exercício 1.ipynb
@@ -84,9 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         reaction products_industry_name  occurrence_count\n",
+      "0        ALOPECIA              Cosmetics               482\n",
+      "1  OVARIAN CANCER              Cosmetics               357\n",
+      "2        PRURITUS              Cosmetics               272\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Exercício 1 - Questão 2 - Item 3\n",
