Create Makefile. Supress output with local data

--- a/Exercício 1/Exercício 1.ipynb
+++ b/Exercício 1/Exercício 1.ipynb
@@ -2,38 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/beta/.pyenv/versions/3.10.4/envs/greenpeace/lib/python3.10/site-packages/google/auth/_default.py:78: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
-      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n",
-      "/home/beta/.pyenv/versions/3.10.4/envs/greenpeace/lib/python3.10/site-packages/google/auth/_default.py:78: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
-      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from pathlib import Path\n",
     "from google.cloud import bigquery\n",
+    "from IPython.utils import io\n",
+    "from pathlib import Path\n",
     "\n",
-    "client = bigquery.Client()\n"
+    "with io.capture_output() as captured:\n",
+    "    client = bigquery.Client()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         reaction  occurrence_count\n",
-      "0  OVARIAN CANCER             33266\n"
+      "|    | reaction       |   occurrence_count |\n",
+      "|---:|:---------------|-------------------:|\n",
+      "|  0 | OVARIAN CANCER |              33266 |\n"
      ]
     }
    ],
@@ -50,20 +42,21 @@
     "    query = fd.read()\n",
     "    query_job = client.query(query)\n",
     "    results = query_job.result()\n",
-    "    print(results.to_dataframe().to_string())\n"
+    "    print(results.to_dataframe().to_markdown())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  reaction products_industry_name  occurrence_count\n",
-      "0    DEATH              Cosmetics             18632\n"
+      "|    | reaction   | products_industry_name   |   occurrence_count |\n",
+      "|---:|:-----------|:-------------------------|-------------------:|\n",
+      "|  0 | DEATH      | Cosmetics                |              18632 |\n"
      ]
     }
    ],
@@ -79,22 +72,23 @@
     "    query = fd.read()\n",
     "    query_job = client.query(query)\n",
     "    results = query_job.result()\n",
-    "    print(results.to_dataframe().to_string())\n"
+    "    print(results.to_dataframe().to_markdown())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         reaction products_industry_name  occurrence_count\n",
-      "0        ALOPECIA              Cosmetics               482\n",
-      "1  OVARIAN CANCER              Cosmetics               357\n",
-      "2        PRURITUS              Cosmetics               272\n"
+      "|    | reaction       | products_industry_name   |   occurrence_count |\n",
+      "|---:|:---------------|:-------------------------|-------------------:|\n",
+      "|  0 | ALOPECIA       | Cosmetics                |                482 |\n",
+      "|  1 | OVARIAN CANCER | Cosmetics                |                357 |\n",
+      "|  2 | PRURITUS       | Cosmetics                |                272 |\n"
      ]
     }
    ],
@@ -111,7 +105,7 @@
     "    query = fd.read()\n",
     "    query_job = client.query(query)\n",
     "    results = query_job.result()\n",
-    "    print(results.to_dataframe().to_string())\n"
+    "    print(results.to_dataframe().to_markdown())\n"
    ]
   }
  ],
