--- a/Exercício 1/Exercício 1.ipynb
+++ b/Exercício 1/Exercício 1.ipynb
@@ -31,13 +31,13 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Exercício 1 - Questão 2 - Item 1\n",
+    "Exercício 1 - Tarefa 2 - Item 1\n",
     "\n",
     "Qual o tipo de reação mais reportado na tabela? Lembre-se que uma linha pode ter\n",
     "mais de uma reação separada por “;”.\n",
     "\"\"\"\n",
     "\n",
-    "query_path = Path(\".\") / \"Questão 2/Item 1/item1.sql\"\n",
+    "query_path = Path(\".\") / \"Tarefa 2/Item 1/item1.sql\"\n",
     "with open(query_path, \"r\") as fd:\n",
     "    query = fd.read()\n",
     "    query_job = client.query(query)\n",
@@ -62,12 +62,12 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Exercício 1 - Questão 2 - Item 2\n",
+    "Exercício 1 - Tarefa 2 - Item 2\n",
     "\n",
     "Qual o nome da indústria que tem mais mortes reportadas?\n",
     "\"\"\"\n",
     "\n",
-    "query_path = Path(\".\") / \"Questão 2/Item 2/item2.sql\"\n",
+    "query_path = Path(\".\") / \"Tarefa 2/Item 2/item2.sql\"\n",
     "with open(query_path, \"r\") as fd:\n",
     "    query = fd.read()\n",
     "    query_job = client.query(query)\n",
@@ -94,13 +94,13 @@
    ],
    "source": [
     "\"\"\"\n",
-    "Exercício 1 - Questão 2 - Item 3\n",
+    "Exercício 1 - Tarefa 2 - Item 3\n",
     "\n",
     "Quais as 3 principais reações adversas de pessoas entre 18-25 anos na indústria de\n",
     "cosméticos?\n",
     "\"\"\"\n",
     "\n",
-    "query_path = Path(\".\") / \"Questão 2/Item 3/item3.sql\"\n",
+    "query_path = Path(\".\") / \"Tarefa 2/Item 3/item3.sql\"\n",
     "with open(query_path, \"r\") as fd:\n",
     "    query = fd.read()\n",
     "    query_job = client.query(query)\n",
