--- a/Exercício 2/Exercício 2.ipynb
+++ b/Exercício 2/Exercício 2.ipynb
@@ -342,9 +342,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folder for type *grass* already exists\n",
+      "Folder for type *electric* already exists\n",
+      "Folder for type *flying* already exists\n",
+      "Folder for type *fire* already exists\n",
+      "Folder for type *water* already exists\n",
+      "Folder for type *poison* already exists\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Tarefa 3.b\n",
@@ -390,6 +403,48 @@
     "    else:\n",
     "        print(f\"Folder for type *{pokemon_type}* already exists\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Tarefa 3.1\n",
+    "\n",
+    "Adicione em cada uma das pastas dois arquivos em CSV\n",
+    "Cada pasta deve ter dois arquivos um com todos os homens com Pokémons\n",
+    "daquele tipo, e outro com todas as mulheres com Pokémons daquele tipo\n",
+    "\"\"\"\n",
+    "\n",
+    "pokemon_by_type = {\n",
+    "    pokemon_type: [] for pokemon_type in pokemon_types\n",
+    "}\n",
+    "\n",
+    "for pokemon in pokemons:\n",
+    "    for type_item in pokemon[\"types\"]:\n",
+    "        for pokemon_type in pokemon_types:\n",
+    "            if type_item[\"type\"][\"name\"] == pokemon_type:\n",
+    "                pokemon_by_type[pokemon_type].append(pokemon[\"name\"])\n",
+    "\n",
+    "for pokemon_type in pokemon_types:\n",
+    "    filtered_users_df = users_df[users_df[\"pokemon\"].isin(pokemon_by_type[pokemon_type])]\n",
+    "\n",
+    "    male_filtered_users_df = filtered_users_df[filtered_users_df[\"gender\"] == \"male\"]\n",
+    "    male_filtered_users_df.to_csv(f\"csvs/{pokemon_type}_male_users.csv\", index=False)\n",
+    "\n",
+    "    female_filtered_users_df = filtered_users_df[filtered_users_df[\"gender\"] == \"female\"]\n",
+    "    female_filtered_users_df.to_csv(f\"csvs/{pokemon_type}_female_users.csv\", index=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
