--- a/Exercício 2/Exercício 2.ipynb
+++ b/Exercício 2/Exercício 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -48,20 +48,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|    | first_name   | last_name   | gender   | email                           | cell           |   age |\n",
-      "|---:|:-------------|:------------|:---------|:--------------------------------|:---------------|------:|\n",
-      "|  0 | Jovina       | Melo        | female   | jovina.melo@example.com         | (61) 4446-4868 |    51 |\n",
-      "|  1 | Consulino    | Gonçalves   | male     | consulino.goncalves@example.com | (48) 5295-3687 |    33 |\n",
-      "|  2 | Geneci       | da Mata     | female   | geneci.damata@example.com       | (17) 2119-0986 |    36 |\n",
-      "|  3 | Indiara      | Vieira      | female   | indiara.vieira@example.com      | (58) 8267-5360 |    63 |\n",
-      "|  4 | Lívian       | Costa       | female   | livian.costa@example.com        | (42) 5022-2854 |    46 |\n"
+      "|    | first_name   | last_name   | gender   | email                          | cell           |   age |\n",
+      "|---:|:-------------|:------------|:---------|:-------------------------------|:---------------|------:|\n",
+      "|  0 | Elisabete    | Silveira    | female   | elisabete.silveira@example.com | (06) 3167-2371 |    65 |\n",
+      "|  1 | Antonino     | da Mata     | male     | antonino.damata@example.com    | (30) 2331-9258 |    28 |\n",
+      "|  2 | Neila        | Oliveira    | female   | neila.oliveira@example.com     | (97) 2482-9681 |    55 |\n",
+      "|  3 | Dayane       | Campos      | female   | dayane.campos@example.com      | (81) 9297-8780 |    58 |\n",
+      "|  4 | Ismael       | da Rosa     | male     | ismael.darosa@example.com      | (02) 7159-8519 |    30 |\n"
      ]
     }
    ],
@@ -91,20 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|    | first_name   | last_name   | gender   | email                           | cell           |   age | state            |\n",
-      "|---:|:-------------|:------------|:---------|:--------------------------------|:---------------|------:|:-----------------|\n",
-      "|  0 | Jovina       | Melo        | female   | jovina.melo@example.com         | (61) 4446-4868 |    51 | Distrito Federal |\n",
-      "|  1 | Consulino    | Gonçalves   | male     | consulino.goncalves@example.com | (48) 5295-3687 |    33 | Santa Catarina   |\n",
-      "|  2 | Geneci       | da Mata     | female   | geneci.damata@example.com       | (17) 2119-0986 |    36 | São Paulo        |\n",
-      "|  3 | Lívian       | Costa       | female   | livian.costa@example.com        | (42) 5022-2854 |    46 | Paraná           |\n",
-      "|  4 | Renata       | Cardoso     | female   | renata.cardoso@example.com      | (98) 9721-5516 |    57 | Maranhão         |\n"
+      "|    | first_name   | last_name   | gender   | email                       | cell           |   age | state      |\n",
+      "|---:|:-------------|:------------|:---------|:----------------------------|:---------------|------:|:-----------|\n",
+      "|  0 | Neila        | Oliveira    | female   | neila.oliveira@example.com  | (97) 2482-9681 |    55 | Amazonas   |\n",
+      "|  1 | Dayane       | Campos      | female   | dayane.campos@example.com   | (81) 9297-8780 |    58 | Pernambuco |\n",
+      "|  2 | Maurílio     | da Paz      | male     | maurilio.dapaz@example.com  | (68) 2005-7551 |    63 | Acre       |\n",
+      "|  3 | Reis         | Freitas     | male     | reis.freitas@example.com    | (63) 6383-8269 |    67 | Tocantins  |\n",
+      "|  4 | Analice      | de Souza    | female   | analice.desouza@example.com | (81) 1902-1188 |    74 | Pernambuco |\n"
      ]
     }
    ],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -289,20 +289,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "|    | first_name   | last_name   | gender   | email                           | cell           |   age | state            | pokemon   |\n",
-      "|---:|:-------------|:------------|:---------|:--------------------------------|:---------------|------:|:-----------------|:----------|\n",
-      "|  0 | Jovina       | Melo        | female   | jovina.melo@example.com         | (61) 4446-4868 |    51 | Distrito Federal | snivy     |\n",
-      "|  1 | Consulino    | Gonçalves   | male     | consulino.goncalves@example.com | (48) 5295-3687 |    33 | Santa Catarina   | cyndaquil |\n",
-      "|  2 | Geneci       | da Mata     | female   | geneci.damata@example.com       | (17) 2119-0986 |    36 | São Paulo        | rowlet    |\n",
-      "|  3 | Lívian       | Costa       | female   | livian.costa@example.com        | (42) 5022-2854 |    46 | Paraná           | oshawott  |\n",
-      "|  4 | Renata       | Cardoso     | female   | renata.cardoso@example.com      | (98) 9721-5516 |    57 | Maranhão         | piplup    |\n"
+      "|    | first_name   | last_name   | gender   | email                       | cell           |   age | state      | pokemon    |\n",
+      "|---:|:-------------|:------------|:---------|:----------------------------|:---------------|------:|:-----------|:-----------|\n",
+      "|  0 | Neila        | Oliveira    | female   | neila.oliveira@example.com  | (97) 2482-9681 |    55 | Amazonas   | cyndaquil  |\n",
+      "|  1 | Dayane       | Campos      | female   | dayane.campos@example.com   | (81) 9297-8780 |    58 | Pernambuco | mudkip     |\n",
+      "|  2 | Maurílio     | da Paz      | male     | maurilio.dapaz@example.com  | (68) 2005-7551 |    63 | Acre       | sobble     |\n",
+      "|  3 | Reis         | Freitas     | male     | reis.freitas@example.com    | (63) 6383-8269 |    67 | Tocantins  | rowlet     |\n",
+      "|  4 | Analice      | de Souza    | female   | analice.desouza@example.com | (81) 1902-1188 |    74 | Pernambuco | charmander |\n"
      ]
     }
    ],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,19 +342,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Folder for type *grass* already exists\n",
-      "Folder for type *electric* already exists\n",
-      "Folder for type *flying* already exists\n",
-      "Folder for type *fire* already exists\n",
-      "Folder for type *water* already exists\n",
-      "Folder for type *poison* already exists\n"
+      "Folder for type *grass* created successfully with ID: 1gJfkwPYhQXK5BekvcEX1sRFH0mewLNfY\n",
+      "Folder for type *electric* created successfully with ID: 1n5aVm6mD27ZACUzdl8giK_p9y6ebcnlW\n",
+      "Folder for type *flying* created successfully with ID: 1xWW2NMFUn9VOqYhVpAclOIPnySexKIU0\n",
+      "Folder for type *fire* created successfully with ID: 1qUcMAnfkxR7LSIzqgrgsD05uDMi9G9RG\n",
+      "Folder for type *water* created successfully with ID: 1hKT4EQ-0It58t8tC8gRK5dxbk_jSqGPo\n",
+      "Folder for type *poison* created successfully with ID: 1cu-T9rzkHPX8TcXJSEt7bSPDDyN03BdK\n"
      ]
     }
    ],
@@ -406,9 +406,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File for type *grass* and gender *male* created successfully with ID: 1AQ8_LR-J1Wj1wHO3EOTprYTyAmbKgikq\n",
+      "File for type *grass* and gender *female* created successfully with ID: 1nCmbP2LjzJ3XSrvhWYoC5kHA4sxB2M2r\n",
+      "File for type *electric* and gender *male* created successfully with ID: 1FwVb0TlOS7-5qwdl9MMnctfMi-SNDFD3\n",
+      "File for type *electric* and gender *female* created successfully with ID: 1HV9mTnrSMDTcw-WD17R1XjW6BYrey2rZ\n",
+      "File for type *flying* and gender *male* created successfully with ID: 1rvRkQlYTmNYO35pFwmMaB0Ri8niERnLM\n",
+      "File for type *flying* and gender *female* created successfully with ID: 1_M1GraBt8EZgfYMH9RCDHqynJ3b705dc\n",
+      "File for type *fire* and gender *male* created successfully with ID: 1QDbTEF0Q2twkpuwh3ritqQJ19ijTMdbn\n",
+      "File for type *fire* and gender *female* created successfully with ID: 1lHmCTY3BSjMHCPFDjpMqwmFLNIo4ongU\n",
+      "File for type *water* and gender *male* created successfully with ID: 1clXHkzIhM2JLKEDsA7RgufwvrD9Nd4Bg\n",
+      "File for type *water* and gender *female* created successfully with ID: 1Sj8uVhcYHmC8tBWdVQlNMul7E_N4xpvg\n",
+      "File for type *poison* and gender *male* created successfully with ID: 1tL-_15M5HIofXN-KdqT4N9q6vxuUY953\n",
+      "File for type *poison* and gender *female* created successfully with ID: 1uzfZQby8k0EWDRMuQv0cUn3uBdNkyS1b\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Tarefa 3.1\n",
@@ -428,20 +447,29 @@
     "            if type_item[\"type\"][\"name\"] == pokemon_type:\n",
     "                pokemon_by_type[pokemon_type].append(pokemon[\"name\"])\n",
     "\n",
+    "genders = [\"male\", \"female\"]\n",
     "for pokemon_type in pokemon_types:\n",
-    "    filtered_users_df = users_df[users_df[\"pokemon\"].isin(pokemon_by_type[pokemon_type])]\n",
+    "    for gender in genders:\n",
+    "        filtered_users_df = users_df[users_df[\"pokemon\"].isin(pokemon_by_type[pokemon_type])]\n",
+    "        filtered_users_df = filtered_users_df[filtered_users_df[\"gender\"] == \"male\"]\n",
+    "        filtered_users_df.to_csv(f\"csvs/{pokemon_type}_{gender}_users.csv\", index=False)\n",
     "\n",
-    "    male_filtered_users_df = filtered_users_df[filtered_users_df[\"gender\"] == \"male\"]\n",
-    "    male_filtered_users_df.to_csv(f\"csvs/{pokemon_type}_male_users.csv\", index=False)\n",
+    "        try:\n",
+    "            file_metadata = {\n",
+    "                \"name\": \"male.csv\",\n",
+    "                \"parents\": [google_drive_folder_id_by_type[pokemon_type]],\n",
+    "            }\n",
+    "            media = MediaFileUpload(f\"csvs/{pokemon_type}_{gender}_users.csv\", mimetype='text/plain')\n",
+    "            file = service.files().create(body=file_metadata, media_body=media, fields=\"id\").execute()\n",
+    "            print(f\"File for type *{pokemon_type}* and gender *{gender}* created successfully with ID: {file.get('id')}\")\n",
     "\n",
-    "    female_filtered_users_df = filtered_users_df[filtered_users_df[\"gender\"] == \"female\"]\n",
-    "    female_filtered_users_df.to_csv(f\"csvs/{pokemon_type}_female_users.csv\", index=False)\n",
-    "\n"
+    "        except HttpError as err:\n",
+    "            print(f\"{err} for type *{pokemon_type}* and gender *{gender}*\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
