--- a/Exercício 2/Exercício 2.ipynb
+++ b/Exercício 2/Exercício 2.ipynb
@@ -455,11 +455,12 @@
     "        filtered_users_df.to_csv(f\"csvs/{pokemon_type}_{gender}_users.csv\", index=False)\n",
     "\n",
     "        try:\n",
+    "            filename = f\"{pokemon_type}_{gender}_users.csv\"\n",
     "            file_metadata = {\n",
-    "                \"name\": \"male.csv\",\n",
+    "                \"name\": filename,\n",
     "                \"parents\": [google_drive_folder_id_by_type[pokemon_type]],\n",
     "            }\n",
-    "            media = MediaFileUpload(f\"csvs/{pokemon_type}_{gender}_users.csv\", mimetype='text/plain')\n",
+    "            media = MediaFileUpload(f\"csvs/{filename}\", mimetype='text/plain')\n",
     "            file = service.files().create(body=file_metadata, media_body=media, fields=\"id\").execute()\n",
     "            print(f\"File for type *{pokemon_type}* and gender *{gender}* created successfully with ID: {file.get('id')}\")\n",
     "\n",
@@ -469,10 +470,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|    | first_name   | last_name   | gender   | email                       | cell           |   age | state      | pokemon    | regiao   | types         |\n",
+      "|---:|:-------------|:------------|:---------|:----------------------------|:---------------|------:|:-----------|:-----------|:---------|:--------------|\n",
+      "|  0 | Neila        | Oliveira    | female   | neila.oliveira@example.com  | (97) 2482-9681 |    55 | Amazonas   | cyndaquil  | Norte    | fire,         |\n",
+      "|  1 | Dayane       | Campos      | female   | dayane.campos@example.com   | (81) 9297-8780 |    58 | Pernambuco | mudkip     | Nordeste | water,        |\n",
+      "|  2 | Maurílio     | da Paz      | male     | maurilio.dapaz@example.com  | (68) 2005-7551 |    63 | Acre       | sobble     | Norte    | water,        |\n",
+      "|  3 | Reis         | Freitas     | male     | reis.freitas@example.com    | (63) 6383-8269 |    67 | Tocantins  | rowlet     | Norte    | grass,flying, |\n",
+      "|  4 | Analice      | de Souza    | female   | analice.desouza@example.com | (81) 1902-1188 |    74 | Pernambuco | charmander | Nordeste | fire,         |\n",
+      "|  5 | Isaura       | Lima        | female   | isaura.lima@example.com     | (74) 2903-6779 |    51 | Bahia      | sobble     | Nordeste | water,        |\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Tarefa 4\n",
+    "\n",
+    "Por fim, crie um Google Sheets com um resumo indicando:\n",
+    "O número de pessoas por região do Brasil (Norte, Sul, Sudeste, Nordeste, Centro-Oeste)\n",
+    "e o elemento de seus Pokemons\n",
+    "\"\"\"\n",
+    "\n",
+    "users_df.to_csv(\"csvs/users.csv\", index=False)\n",
+    "\n",
+    "regioes = {\n",
+    "    'Norte': ['Amazonas', 'Acre', 'Tocantins'],\n",
+    "    'Sul': ['Rio Grande do Sul', 'Santa Catarina', 'Paraná'],\n",
+    "    'Sudeste': ['São Paulo', 'Rio de Janeiro', 'Minas Gerais', 'Espírito Santo'],\n",
+    "    'Nordeste': ['Pernambuco', 'Bahia'],\n",
+    "    'Centro-Oeste': ['Goiás', 'Mato Grosso', 'Mato Grosso do Sul', 'Distrito Federal']\n",
+    "}\n",
+    "\n",
+    "extended_users_df = users_df.copy()\n",
+    "extended_users_df[\"regiao\"] = \"\"\n",
+    "extended_users_df[\"types\"] = \"\"\n",
+    "\n",
+    "for regiao, estados in regioes.items():\n",
+    "    extended_users_df.loc[extended_users_df[\"state\"].isin(estados), \"regiao\"] = regiao\n",
+    "\n",
+    "for pokemon_type, pokemons in pokemon_by_type.items():\n",
+    "    extended_users_df.loc[extended_users_df[\"pokemon\"].isin(pokemons), \"types\"] += f\"{pokemon_type},\" \n",
+    "\n",
+    "print(extended_users_df.to_markdown())"
+   ]
   }
  ],
  "metadata": {
