Implement get_region and get_pokemon_types

--- a/Exercício 2/Exercício 2.ipynb
+++ b/Exercício 2/Exercício 2.ipynb
@@ -17,8 +17,7 @@
     "from pathlib import Path\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
-    "from googleapiclient.http import MediaFileUpload\n",
-    "\n"
+    "from googleapiclient.http import MediaFileUpload\n"
    ]
   },
   {
@@ -43,7 +42,7 @@
     "\n",
     "users = RandomUser.generate_users(10, {\"nat\": \"br\"})\n",
     "\n",
-    "print(len(users))"
+    "print(len(users))\n"
    ]
   },
   {
@@ -116,6 +115,7 @@
     "Se o telefone celular tiver um DDD inexistente remova o usuário da tabela\n",
     "\"\"\"\n",
     "\n",
+    "\n",
     "def get_state_from_ddd(ddd):\n",
     "    state = {\n",
     "        \"11\": \"São Paulo\",\n",
@@ -184,9 +184,10 @@
     "        \"96\": \"Amapá\",\n",
     "        \"97\": \"Amazonas\",\n",
     "        \"98\": \"Maranhão\",\n",
-    "        \"99\": \"Maranhão\"\n",
+    "        \"99\": \"Maranhão\",\n",
     "    }\n",
     "    return state.get(ddd, None)\n",
+    "\n",
     "\n",
     "for index, user_row in users_df.iterrows():\n",
     "    ddd = user_row.cell[1:3]\n",
@@ -383,7 +384,7 @@
     "\n",
     "file_names_list = []\n",
     "for file in files[\"files\"]:\n",
-    "        file_names_list.append(file[\"name\"])\n",
+    "    file_names_list.append(file[\"name\"])\n",
     "\n",
     "google_drive_folder_id_by_type = {}\n",
     "for pokemon_type in pokemon_types:\n",
@@ -395,7 +396,7 @@
     "                \"parents\": [greenpeace_folder_id],\n",
     "            }\n",
     "            file = service.files().create(body=file_metadata).execute()\n",
-    "            google_drive_folder_id_by_type[pokemon_type] = file.get('id')\n",
+    "            google_drive_folder_id_by_type[pokemon_type] = file.get(\"id\")\n",
     "            print(f\"Folder for type *{pokemon_type}* created successfully with ID: {file.get('id')}\")\n",
     "\n",
     "        except HttpError as err:\n",
@@ -437,9 +438,7 @@
     "daquele tipo, e outro com todas as mulheres com Pokémons daquele tipo\n",
     "\"\"\"\n",
     "\n",
-    "pokemon_by_type = {\n",
-    "    pokemon_type: [] for pokemon_type in pokemon_types\n",
-    "}\n",
+    "pokemon_by_type = {pokemon_type: [] for pokemon_type in pokemon_types}\n",
     "\n",
     "for pokemon in pokemons:\n",
     "    for type_item in pokemon[\"types\"]:\n",
@@ -460,9 +459,11 @@
     "                \"name\": filename,\n",
     "                \"parents\": [google_drive_folder_id_by_type[pokemon_type]],\n",
     "            }\n",
-    "            media = MediaFileUpload(f\"csvs/{filename}\", mimetype='text/plain')\n",
+    "            media = MediaFileUpload(f\"csvs/{filename}\", mimetype=\"text/plain\")\n",
     "            file = service.files().create(body=file_metadata, media_body=media, fields=\"id\").execute()\n",
-    "            print(f\"File for type *{pokemon_type}* and gender *{gender}* created successfully with ID: {file.get('id')}\")\n",
+    "            print(\n",
+    "                f\"File for type *{pokemon_type}* and gender *{gender}* created successfully with ID: {file.get('id')}\"\n",
+    "            )\n",
     "\n",
     "        except HttpError as err:\n",
     "            print(f\"{err} for type *{pokemon_type}* and gender *{gender}*\")\n"
@@ -470,24 +471,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 229,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "|    | first_name   | last_name   | gender   | email                       | cell           |   age | state      | pokemon    | regiao   | types         |\n",
-      "|---:|:-------------|:------------|:---------|:----------------------------|:---------------|------:|:-----------|:-----------|:---------|:--------------|\n",
-      "|  0 | Neila        | Oliveira    | female   | neila.oliveira@example.com  | (97) 2482-9681 |    55 | Amazonas   | cyndaquil  | Norte    | fire,         |\n",
-      "|  1 | Dayane       | Campos      | female   | dayane.campos@example.com   | (81) 9297-8780 |    58 | Pernambuco | mudkip     | Nordeste | water,        |\n",
-      "|  2 | Maurílio     | da Paz      | male     | maurilio.dapaz@example.com  | (68) 2005-7551 |    63 | Acre       | sobble     | Norte    | water,        |\n",
-      "|  3 | Reis         | Freitas     | male     | reis.freitas@example.com    | (63) 6383-8269 |    67 | Tocantins  | rowlet     | Norte    | grass,flying, |\n",
-      "|  4 | Analice      | de Souza    | female   | analice.desouza@example.com | (81) 1902-1188 |    74 | Pernambuco | charmander | Nordeste | fire,         |\n",
-      "|  5 | Isaura       | Lima        | female   | isaura.lima@example.com     | (74) 2903-6779 |    51 | Bahia      | sobble     | Nordeste | water,        |\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Tarefa 4\n",
@@ -499,25 +485,168 @@
     "\n",
     "users_df.to_csv(\"csvs/users.csv\", index=False)\n",
     "\n",
-    "regioes = {\n",
-    "    'Norte': ['Amazonas', 'Acre', 'Tocantins'],\n",
-    "    'Sul': ['Rio Grande do Sul', 'Santa Catarina', 'Paraná'],\n",
-    "    'Sudeste': ['São Paulo', 'Rio de Janeiro', 'Minas Gerais', 'Espírito Santo'],\n",
-    "    'Nordeste': ['Pernambuco', 'Bahia'],\n",
-    "    'Centro-Oeste': ['Goiás', 'Mato Grosso', 'Mato Grosso do Sul', 'Distrito Federal']\n",
+    "regions = {\n",
+    "    \"Norte\": [\"Amazonas\", \"Acre\", \"Tocantins\"],\n",
+    "    \"Sul\": [\"Rio Grande do Sul\", \"Santa Catarina\", \"Paraná\"],\n",
+    "    \"Sudeste\": [\"São Paulo\", \"Rio de Janeiro\", \"Minas Gerais\", \"Espírito Santo\"],\n",
+    "    \"Nordeste\": [\"Pernambuco\", \"Bahia\"],\n",
+    "    \"Centro-Oeste\": [\"Goiás\", \"Mato Grosso\", \"Mato Grosso do Sul\", \"Distrito Federal\"],\n",
     "}\n",
     "\n",
-    "extended_users_df = users_df.copy()\n",
-    "extended_users_df[\"regiao\"] = \"\"\n",
-    "extended_users_df[\"types\"] = \"\"\n",
+    "types_by_region = {}\n",
+    "for region in regions.keys():\n",
+    "    types_by_region[region] = {}\n",
+    "    for pokemon_type in pokemon_types:\n",
+    "        types_by_region[region][pokemon_type] = 0\n",
+    "# types_by_region\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_region(state):\n",
+    "    for region, states in regions.items():\n",
+    "        if state in states:\n",
+    "            return region\n",
     "\n",
-    "for regiao, estados in regioes.items():\n",
-    "    extended_users_df.loc[extended_users_df[\"state\"].isin(estados), \"regiao\"] = regiao\n",
     "\n",
-    "for pokemon_type, pokemons in pokemon_by_type.items():\n",
-    "    extended_users_df.loc[extended_users_df[\"pokemon\"].isin(pokemons), \"types\"] += f\"{pokemon_type},\" \n",
+    "def get_pokemon_types(pokemon):\n",
+    "    pokemon_types = []\n",
+    "    for pokemon_type, pokemon_list in pokemon_by_type.items():\n",
+    "        if pokemon in pokemon_list:\n",
+    "            pokemon_types.append(pokemon_type)\n",
+    "    return pokemon_types\n",
     "\n",
-    "print(extended_users_df.to_markdown())"
+    "\n",
+    "for index, row in users_df.iterrows():\n",
+    "    for pokemon_type in get_pokemon_types(row.pokemon):\n",
+    "        types_by_region[get_region(row.state)][pokemon_type] += 1\n",
+    "\n",
+    "# types_by_region\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    # for region, states in regions.items():\n",
+    "    #     if row[\"state\"] in states:\n",
+    "    #         for pokemon_type in pokemon_types:\n",
+    "    #             if row[\"pokemon\"] in pokemon_by_type[pokemon_type]:\n",
+    "    #                 types_by_region[region][pokemon_type] += 1\n",
+    "\n",
+    "# type_by_region\n",
+    "# type_by_pokemon = {\n",
+    "#     pokemon: [] for pokemon in pokemons\n",
+    "# }\n",
+    "# type_by_pokemon\n",
+    "\n",
+    "# for pokemon in pokemons:\n",
+    "#     # for type_item in pokemon[\"types\"]:\n",
+    "#         # if type_item[\"type\"][\"name\"] in type_by_pokemon[pokemon[\"name\"]]:\n",
+    "#         #     type_by_pokemon[pokemon[\"name\"]].append(type_item[\"type\"][\"name\"])\n",
+    "\n",
+    "# type_by_pokemon\n",
+    "# pokemon_by_type = {\n",
+    "#     pokemon_type: [] for pokemon_type in pokemon_types\n",
+    "# }\n",
+    "\n",
+    "# for pokemon in pokemons:\n",
+    "#     for type_item in pokemon[\"types\"]:\n",
+    "#         for pokemon_type in pokemon_types:\n",
+    "#             if type_item[\"type\"][\"name\"] == pokemon_type:\n",
+    "#                 pokemon_by_type[pokemon_type].append(pokemon[\"name\"])\n",
+    "\n",
+    "# types\n",
+    "\n",
+    "# for index, row in users_df.iterrows():\n",
+    "#     for region, states in regions.items():\n",
+    "#         if row.state in states:\n",
+    "#             pass\n",
+    "            # print(f\"{region}\")\n",
+    "            # print(f\"{row.pokemon}\")\n",
+    "            # for pokemon_type in pokemon_types:\n",
+    "            #     print(f\"{pokemon_type}\")\n",
+    "\n",
+    "    #             types_by_region[region] += 1\n",
+    "    \n",
+    "\n",
+    "    # types_by_region[row.region].append(row.pokemon)\n",
+    "\n",
+    "# types_by_region\n",
+    "\n",
+    "# extended_users_df = users_df.copy()\n",
+    "# extended_users_df[\"region\"] = \"\"\n",
+    "# extended_users_df[\"types\"] = \"\"\n",
+    "\n",
+    "# for region, states in regions.items():\n",
+    "#     extended_users_df.loc[extended_users_df[\"state\"].isin(states), \"region\"] = region\n",
+    "\n",
+    "# for pokemon_type, pokemons in pokemon_by_type.items():\n",
+    "#     extended_users_df.loc[extended_users_df[\"pokemon\"].isin(pokemons), \"types\"] += f\"{pokemon_type},\" \n",
+    "\n",
+    "# print(extended_users_df.to_markdown())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "region\n",
+       "Norte       3\n",
+       "Nordeste    3\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calcula o numero de pessoas por regiao\n",
+    "user_by_region = extended_users_df['region'].value_counts()\n",
+    "user_by_region\n",
+    "\n",
+    "# for \n",
+    "\n",
+    "# for pokemon_type in pokemon_types:\n",
+    "\n",
+    "\n",
+    "# users_by_type = extended_users_df['types'].apply(lambda x: x.split(\", \"))\n",
+    "# users_by_type\n",
+    "\n",
+    "# pessoas_por_regiao = extended_users_df['region'].value_counts()\n",
+    "# pessoas_por_regiao\n",
+    "\n",
+    "# tipo_pokemon_por_regiao = extended_users_df.groupby('region')['types'].apply(lambda x: ', '.join(x)).reset_index()\n",
+    "# tipo_pokemon_por_regiao\n",
+    "\n",
+    "# print(extended_users_df.groupby(\"types\", group_keys=True).count().to_markdown())\n",
+    "\n",
+    "\n",
+    "# extended_users_df.agg(lambda x: ','.join(x.astype(str)))\n",
+    "\n",
+    "# extended_users_df['types'] = extended_users_df['types'].str.split(',')\n",
+    "# print(extended_users_df.to_markdown())\n",
+    "\n",
+    "\n",
+    "# pokemon_by_type\n",
+    "\n",
+    "# pokemon_by_type_df = pd.DataFrame.from_dict(pokemon_by_type, orient='index').transpose()\n",
+    "# pokemon_by_type_df\n",
+    "\n",
+    "# df = extended_users_df.explode('types')\n",
+    "# df"
    ]
   }
  ],
